# pmdb

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  404.html  CMakeLists.txt  ColourMap.cpp  ColourMap.hpp  Config.cpp  Config.h  Config.hpp  ConsoleColours.cpp  ConsoleColours.h  FolderMap.cpp  FolderMap.hpp  LICENSE  MessageDatabase.cpp  MessageDatabase.h  MessageDatabase.hpp  MsgTemplate.cpp  MsgTemplate.h  MsgTemplate.hpp  PMSource.cpp  PMSource.h  PMSource.hpp  PrivateMessage.cpp  PrivateMessage.h  PrivateMessage.hpp  SortType.hpp  Subsets.h  Subsets.hpp  XMLDocument.cpp  XMLDocument.h  XMLDocument.hpp  XMLNode.cpp  XMLNode.h  XMLNode.hpp  basic_usage.html  configuration.html  directories.html  (+24 more)
code/: CMakeLists.txt  ColourMap.cpp  ColourMap.hpp  Compression.hpp  CompressionDetection.cpp  CompressionDetection.hpp  Config.cpp  Config.hpp  ConsoleColours.cpp  ConsoleColours.hpp  Encoding.cpp  Encoding.hpp  FolderMap.cpp  FolderMap.hpp  HTMLOptions.hpp  HTMLStandard.cpp  HTMLStandard.hpp  MessageDatabase.cpp  MessageDatabase.hpp  MsgTemplate.cpp  MsgTemplate.hpp  PMSource.cpp  PMSource.hpp  PrivateMessage.cpp  PrivateMessage.hpp  ReturnCodes.hpp  SortType.cpp  SortType.hpp  Version.cpp  Version.hpp  XMLDocument.cpp  XMLDocument.hpp  XMLNode.cpp  XMLNode.hpp  browser_detection.cpp  browser_detection.hpp  folder_entry.tpl  functions.cpp  functions.hpp  html_generation.cpp  (+7 more)
code/bbcode/: AdvancedTemplateBBCode.cpp  AdvancedTemplateBBCode.hpp  AdvancedTplAmpTransformBBCode.hpp  BBCode.hpp  BBCodeParser.cpp  BBCodeParser.hpp  BBCode_Table.cpp  BBCode_Table.hpp  CustomizedSimpleBBCode.cpp  CustomizedSimpleBBCode.hpp  DefaultCodes.hpp  HTMLStandard.hpp  HorizontalRuleBBCode.cpp  HorizontalRuleBBCode.hpp  ListBBCode.cpp  ListBBCode.hpp  Notifier.hpp  SimpleBBCode.cpp  SimpleBBCode.hpp  SimpleTemplateBBCode.cpp  SimpleTemplateBBCode.hpp  SimpleTplAmpTransformBBCode.hpp  Smilie.cpp  Smilie.hpp  SpoilerBBCode.hpp  TableBBCode.cpp  TableBBCode.hpp  TableClasses.cpp  TableClasses.hpp  TextProcessor.hpp  quotes.cpp  quotes.hpp
code/filters/: Filter.hpp  FilterUser.cpp  FilterUser.hpp
code/templates/: .gitignore  defaults.prototype.hpp  folder.tpl  folder_entry.tpl  folder_list.tpl  functions.cpp  functions.hpp  message.tpl
program-no-compression/: CMakeLists.txt
tests/: CMakeLists.txt  FileGuard.hpp  locate_catch.hpp
tests/bbcode/: AdvancedTemplateBBCode.cpp  AdvancedTemplateBBCode_test.cbp  AdvancedTemplateBBCode_test.cpp  AdvancedTplAmpTransformBBCode.cpp  AdvancedTplAmpTransformBBCode_test.cbp  AdvancedTplAmpTransformBBCode_test.cpp  BBCode.cbp  CMakeLists.txt  CustomizedSimpleBBCode.cpp  CustomizedSimpleBBCode_test.cbp  CustomizedSimpleBBCode_test.cpp  HorizontalRuleBBCode.cpp  HorizontalRuleBBCode_test.cbp  HorizontalRuleBBCode_test.cpp  ListBBCode.cpp  ListBBCode_test.cbp  ListBBCode_test.cpp  SimpleBBCode.cpp  SimpleBBCode_test.cbp  SimpleBBCode_test.cpp  SimpleTemplateBBCode.cpp  SimpleTemplateBBCode_test.cbp  SimpleTemplateBBCode_test.cpp  SimpleTplAmpTransformBBCode.cpp  SimpleTplAmpTransformBBCode_test.cbp  SimpleTplAmpTransformBBCode_test.cpp  Smilie.cpp  Smilie_test.cbp  Smilie_test.cpp  TableBBCode.cpp  TableBBCode_test.cbp  TableBBCode_test.cpp  advanced_template_bbcode_test.cbp  customized_simple_bbcode_test.cbp  customized_simple_bbcode_test.cpp  horizontal_rule_bbcode_test.cbp  horizontal_rule_bbcode_test.cpp  list_bbcode_test.cbp  main.cpp  simple_bbcode_test.cbp  (+4 more)
tests/colourmap/: CMakeLists.txt  colourmap_all_colours.map  colourmap_comments_only.map  colourmap_load.cbp  colourmap_load.cpp  colourmap_repeat.map
tests/components/: CMakeLists.txt  ColourMap.cpp  CompressionDetections.cpp  Config.cpp  FolderMap.cpp  HTMLStandard.cpp  MessageDatabase.cpp  PrivateMessage.cpp  SortType.cpp  browser_detection.cpp  component_tests.cbp  html_generation.cpp  names_to_controlsequences.cpp  paths.cpp
tests/components/bbcode/: AdvancedTemplateBBCode.cpp  AdvancedTplAmpTransformBBCode.cpp  BBCodeParser.cpp  CustomizedSimpleBBCode.cpp  DefaultCodes.cpp  HorizontalRuleBBCode.cpp  KillSpacesBeforeNewline.cpp  ListBBCode.cpp  ListNewlinePreProcessor.cpp  SimpleBBCode.cpp  SimpleTemplateBBCode.cpp  SimpleTplAmpTransformBBCode.cpp  Smilie.cpp  SpoilerBBCode.cpp  TableBBCode.cpp  TablePreProcessor.cpp  quotes.cpp
tests/components/filter/: FilterUser.cpp
tests/components/templates/: defaults.cpp  functions.cpp
tests/config/: CMakeLists.txt  config_test_create.cbp  config_test_create.cpp  config_test_setTPL.cbp  config_test_setTPL.cpp  config_test_setURL.cbp  config_test_setURL.cpp  config_tests.cbp
tests/consolecolours/: CMakeLists.txt  names_to_controlsequences.cbp  names_to_controlsequences.cpp
tests/foldermap/: CMakeLists.txt
tests/foldermap/add-get/: CMakeLists.txt  add-get.cbp  add-get.cpp
tests/messagedatabase/: CMakeLists.txt
tests/messagedatabase/addMessage/: CMakeLists.txt  addMessage.cbp  addMessage.cpp
tests/messagedatabase/importFromFile/: CMakeLists.txt  charset-iso-8859-1.xml  charset-ucs-2.xml  charset-ucs-4.xml  charset-utf-16-BE.xml  charset-utf-16-LE.xml  charset-utf-16.xml  charset-utf-8.xml  importFromFile_test.cbp  importFromFile_test.cpp  single_message.xml
tests/messagedatabase/save-load/: CMakeLists.txt  save-load-test.cbp  save-load-test.cmd  save-load-test.cpp  save-load-test.sh
tests/messagedatabase/save-load-compressed/: CMakeLists.txt  save-load-compressed-test.cbp  save-load-compressed-test.cmd  save-load-compressed-test.cpp  save-load-compressed-test.sh
tests/msgtemplate/: CMakeLists.txt  loadFromFile_loadFromString_equality.cbp  loadFromFile_loadFromString_equality.cpp  replacement_tests.cbp  replacement_tests.cpp
tests/pmdb/: CMakeLists.txt  parameter-misuse.cmd  parameter-misuse.sh  test-messages.xml
tests/pmdb-no-comp/: CMakeLists.txt
tests/privatemessage/: CMakeLists.txt
tests/privatemessage/normalise/: CMakeLists.txt  normalise.cbp  normalise.cpp
tests/privatemessage/save-load/: CMakeLists.txt  (+2 more)
tests/privatemessage/save-load-compressed/: CMakeLists.txt  save-load-compressed.cbp  save-load-compressed.cpp
(+58 files in other folders)
